--- a/prod/index.html
+++ b/prod/index.html
@@ -41,11 +41,11 @@
 
 				<section id="gunny_frame2_ASesx" class="section section--gunny_frame2 gunny_frame2 scrollFrame" data-block-id="gunny_frame2"><div
 			class="section__background"><img data-src="gunny/frame2/images/bg.jpg" alt="" class="lazyload desktop"><img data-src="gunny/frame2/images/bg-mobile.jpg" alt="" class="lazyload mobile"><span id="gunny_frame2_ASesx-scrollwatch-pin" class="scrollwatch-pin"></span></div><div class="section__content"><div class="inner inner--gunny_frame2"><img
-				src="gunny/frame2/images/title.png" alt="" class="title"><div class="ranking-top-container"><div id="rank2-scrollWatch" class="ranking-top ranking-2nd"><div class="crown"></div><div class="ranking-title">Username123</div><img src="gunny/frame2/images/ava-3rd.jpg" alt=""><div class="text-container"><div>Máy Chủ:
+				src="gunny/frame2/images/title.png" alt="" class="title"><div class="ranking-top-container"><div id="rank2-scrollWatch" class="ranking-top ranking-2nd"><div class="crown"></div><div class="ranking-title">Username123</div><img data-src="gunny/frame2/images/ava-3rd.jpg" alt="" class="lazyload"><div class="text-container"><div>Máy Chủ:
 								<span>Gunny 12</span></div><div>Số lần đã săn:
-								<span>1200</span></div></div></div><div id="rank1-scrollWatch" class="ranking-top ranking-1st"><div class="crown"></div><div class="ranking-title">Username123</div><img src="gunny/frame2/images/ava-1st.jpg" alt=""><div class="text-container"><div>Máy Chủ:
+								<span>1200</span></div></div></div><div id="rank1-scrollWatch" class="ranking-top ranking-1st"><div class="crown"></div><div class="ranking-title">Username123</div><img data-src="gunny/frame2/images/ava-1st.jpg" alt="" class="lazyload"><div class="text-container"><div>Máy Chủ:
 								<span>Gunny 12</span></div><div>Số lần đã săn:
-								<span>1200</span></div></div></div><div id="rank3-scrollWatch" class="ranking-top ranking-3rd"><div class="crown"></div><div class="ranking-title">Username123</div><img src="gunny/frame2/images/ava-2nd.jpg" alt=""><div class="text-container"><div>Máy Chủ:
+								<span>1200</span></div></div></div><div id="rank3-scrollWatch" class="ranking-top ranking-3rd"><div class="crown"></div><div class="ranking-title">Username123</div><img data-src="gunny/frame2/images/ava-2nd.jpg" alt="" class="lazyload"><div class="text-container"><div>Máy Chủ:
 								<span>Gunny 12</span></div><div>Số lần đã săn:
 								<span>1200</span></div></div></div></div><div class="ranking-swiper-container"><div id="rankingSwiper" class="swiper ranking-swiper"><div class="swiper-wrapper"><div class="swiper-slide"><div class="ranking-nor"><div class="ranking-title">Username123</div><img src="gunny/frame2/images/ava-nor.jpg" alt=""><div class="text-container"><div>Máy Chủ:
 											<span>Gunny 12</span></div><div>Số lần đã săn:
