remove frame3 Swiper add button hover effect

--- a/prod/index.html
+++ b/prod/index.html
@@ -75,25 +75,25 @@
 								Bạn có:
 								<span class="spoint">100</span>
 								lượt quay
-							</div></div><div class="effect" id="effect"><div id="item-1" class="effect__item key-A">item</div><div id="item-2" class="effect__item key-B">item</div><div id="item-3" class="effect__item key-C">item</div><div id="item-8" class="effect__item key-H">item</div><div class="spin-button-container"><button class="pm__rut rut-1" data-value="1">Quay X1</button><button class="pm__rut" data-value="10">Quay X10</button><button>Đổi Quà</button></div><div id="item-4" class="effect__item key-D">item</div><div id="item-7" class="effect__item key-G">item</div><div id="item-6" class="effect__item key-F">item</div><div id="item-5" class="effect__item key-E">item</div></div></div><div class="danh-sach" id="danhSach-scrollWatch"><h2 class="heading">THỢ SĂN MAY MẮN</h2><div id="danhSachSwiper" class="swiper"><div class="swiper-wrapper"><div class="swiper-slide"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
+							</div></div><div class="effect" id="effect"><div id="item-1" class="effect__item key-A">item</div><div id="item-2" class="effect__item key-B">item</div><div id="item-3" class="effect__item key-C">item</div><div id="item-8" class="effect__item key-H">item</div><div class="spin-button-container"><button class="pm__rut rut-1" data-value="1">Quay X1</button><button class="pm__rut" data-value="10">Quay X10</button><button>Đổi Quà</button></div><div id="item-4" class="effect__item key-D">item</div><div id="item-7" class="effect__item key-G">item</div><div id="item-6" class="effect__item key-F">item</div><div id="item-5" class="effect__item key-E">item</div></div></div><div class="danh-sach" id="danhSach-scrollWatch"><h2 class="heading">THỢ SĂN MAY MẮN</h2><div id="danhSach"><div class="text-container"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
 										đã trúng
-									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="swiper-slide"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
+									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="text-container"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
 										đã trúng
-									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="swiper-slide"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
+									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="text-container"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
 										đã trúng
-									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="swiper-slide"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
+									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="text-container"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
 										đã trúng
-									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="swiper-slide"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
+									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="text-container"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
 										đã trúng
-									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="swiper-slide"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
+									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="text-container"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
 										đã trúng
-									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="swiper-slide"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
+									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="text-container"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
 										đã trúng
-									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="swiper-slide"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
+									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="text-container"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
 										đã trúng
-									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="swiper-slide"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
+									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div><div class="text-container"><div class="text-top"><span class="username">Nam Vui Vẻ</span>
 										đã trúng
-									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div></div><div id="danhSachScrollbar" class"swiper-scrollbar swiper-scrollbar-drag"></div></div></div></div></div></div></section>
+									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div></div></div></div></div></div></div></section>
 
 			</div>
 		</div>
