embed iframe to popup

--- a/prod/index.html
+++ b/prod/index.html
@@ -2,18 +2,20 @@
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Website Platform</title>
-		<meta name="description" content="A Single Page Builder"/>
-		<meta property="og:title" content="Website Platform"/>
-		<meta property="og:description" content="A Single Page Builder"/>
-		<link rel="shortcut icon" href="assets/favicon-default.ico"/>
-		<meta property="og:image" content="assets/sharefb-default.jpg"/>
-	<link href="0.prod.css" rel="stylesheet"><link href="prod.css" rel="stylesheet"></head>
-	<body class="">
-		
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Website Platform</title>
+	<meta name="description" content="A Single Page Builder" />
+	<meta property="og:title" content="Website Platform" />
+	<meta property="og:description" content="A Single Page Builder" />
+	<link rel="shortcut icon" href="assets/favicon-default.ico" />
+	<meta property="og:image" content="assets/sharefb-default.jpg" />
+<link href="0.prod.css" rel="stylesheet"><link href="prod.css" rel="stylesheet"></head>
+
+<body class="">
+	
 
 
 
@@ -31,15 +33,14 @@
         fjs.parentNode.insertBefore(js, fjs);
     }
 </script>
-		<div id="wrapper" class="wrapper wrapper--homepage scaleDesktop scaleMobile">
-			<div
-				id="wrapperContent" class="wrapper__content">
-				
-				<section id="gunny_frame1_EwBx8" class="section section--gunny_frame1 gunny_frame1 scrollFrame" data-block-id="gunny_frame1"><div
+	<div id="wrapper" class="wrapper wrapper--homepage scaleDesktop scaleMobile">
+		<div id="wrapperContent" class="wrapper__content">
+			
+			<section id="gunny_frame1_EwBx8" class="section section--gunny_frame1 gunny_frame1 scrollFrame" data-block-id="gunny_frame1"><div
 			class="section__background"><img data-src="gunny/frame1/images/bg.jpg" alt="" class="lazyload desktop"><img data-src="gunny/frame1/images/bg-mobile.jpg" alt="" class="lazyload mobile"><span id="gunny_frame1_EwBx8-scrollwatch-pin" class="scrollwatch-pin"></span></div><div class="section__content"><div
 				class="inner inner--gunny_frame1"><a href="#" class="gunny-logo">Logo</a><img data-src="gunny/frame1/images/title.png" alt="" class="lazyload title"><img data-src="gunny/frame1/images/character.png" alt="" class="lazyload character"><div class="prize1 prize animate__animated animate__shakeY animate__infinite"></div><div class="prize2 prize animate__animated animate__shakeY animate__infinite animate__delay-1s"></div><div class="prize3 prize animate__animated animate__shakeY animate__infinite animate__delay-3s"></div><div class="prize4 prize animate__animated animate__shakeY animate__infinite animate__delay-1s"></div><div class="prize5 prize animate__animated animate__shakeY animate__infinite animate__delay-3s"></div><div class="prize6 prize animate__animated animate__shakeY animate__infinite animate__delay-5s"></div><div class="prize7 prize animate__animated animate__shakeY animate__infinite"></div><a href="#popup-confirm" class="qua-sinh-nhat animate__animated animate__pulse animate__infinite" data-popup>Quà Sinh Nhật</a><a href="#" class="choi-ngay desktop animate__animated animate__pulse animate__infinite">Chơi Ngay</a><nav class="menu"><ul><li class="menu-item" data-active>Trang Chủ</li><li class="menu-item">Cộng Đồng</li><li class="menu-item">Puffin</li><li class="menu-item">Nạp Xu</li></ul></nav></div></div></section>
 
-				<section id="gunny_frame2_ASesx" class="section section--gunny_frame2 gunny_frame2 scrollFrame" data-block-id="gunny_frame2"><div
+			<section id="gunny_frame2_ASesx" class="section section--gunny_frame2 gunny_frame2 scrollFrame" data-block-id="gunny_frame2"><div
 			class="section__background"><img data-src="gunny/frame2/images/bg.jpg" alt="" class="lazyload desktop"><img data-src="gunny/frame2/images/bg-mobile.jpg" alt="" class="lazyload mobile"><span id="gunny_frame2_ASesx-scrollwatch-pin" class="scrollwatch-pin"></span></div><div class="section__content"><div class="inner inner--gunny_frame2"><img
 				src="gunny/frame2/images/title.png" alt="" class="title"><div class="ranking-top-container"><div id="rank2-scrollWatch" class="ranking-top ranking-2nd"><div class="crown"></div><div class="ranking-title">Username123</div><img data-src="gunny/frame2/images/ava-3rd.jpg" alt="" class="lazyload"><div class="text-container"><div>Máy Chủ:
 								<span>Gunny 12</span></div><div>Số lần đã săn:
@@ -69,7 +70,7 @@
 											<span>Gunny 12</span></div><div>Số lần đã săn:
 											<span>1200</span></div></div></div></div></div></div><button class="swiper-button-prev swiper-button-prev--rankingSwiper"></button><button class="swiper-button-next swiper-button-next--rankingSwiper"></button></div><img data-src="gunny/frame2/images/character-left.png" alt="" class="lazyload character-left"><img data-src="gunny/frame2/images/character-right.png" alt="" class="lazyload character-right"></div></div></section>
 
-				<section id="gunny_frame3_Ajs24" class="section section--gunny_frame3 gunny_frame3 scrollFrame" data-block-id="gunny_frame3"><div
+			<section id="gunny_frame3_Ajs24" class="section section--gunny_frame3 gunny_frame3 scrollFrame" data-block-id="gunny_frame3"><div
 			class="section__background"><img data-src="gunny/frame3/images/bg.jpg" alt="" class="lazyload desktop"><img data-src="gunny/frame3/images/bg-mobile.jpg" alt="" class="lazyload mobile"><span id="gunny_frame3_Ajs24-scrollwatch-pin" class="scrollwatch-pin"></span></div><div class="section__content"><div class="inner inner--gunny_frame3"><img src="gunny/frame3/images/title.png" alt="" class="title"><div class="content-container"><div class="mq5" id="mq5-scrollWatch"><div class="top-button-container"><a href="#popup-signin" class="signin-btn">Đăng Nhập</a><button>Lịch Sử</button><button>Nhận Lượt</button></div><div class="text-container"><div>Xin chào:
 								<span>Ngô Bình Phương Phi Vũ</span></div><div>
 								Bạn có:
@@ -95,20 +96,20 @@
 										đã trúng
 									</div><div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div></div></div></div></div></div></div></div></section>
 
-			</div>
 		</div>
+	</div>
 
-		<div id="floating" class="floating">
-			<div id="gunny_float_left_AB54vC" class="floatleft gunny_float_left scrollFrame scaleMobile scaleDesktop desktop" data-block-id="gunny_float_left"><div
+	<div id="floating" class="floating">
+		<div id="gunny_float_left_AB54vC" class="floatleft gunny_float_left scrollFrame scaleMobile scaleDesktop desktop" data-block-id="gunny_float_left"><div
 			class="floatleft__background"><span id="gunny_float_left_AB54vC-scrollwatch-pin" class="scrollwatch-pin"></span></div><div class="floatleft__content"><ul class="left"><li><a href="#" class="item1">Giới Thiệu</a></li><li><a href="#" class="item2">Giải Thưởng</a></li><li><a href="#" class="item3">Thể Lệ</a></li><li><a href="#popup-content" class="item4" data-popup>Hướng Dẫn</a></li><li><a href="#" class="item5">Bảng Xếp Hạng</a></li><li><a href="#" class="item6">Tham Gia</a></li></ul></div></div>
-			<div id="gunny_float_bottom_Ahj5u9" class="floatbottom gunny_float_bottom scrollFrame scaleMobile scaleDesktop mobile" data-block-id="gunny_float_bottom"><div class="floatbottom__background"><span id="gunny_float_bottom_Ahj5u9-scrollwatch-pin" class="scrollwatch-pin"></span></div><div class="floatbottom__content"><ul class="bottom"><li class="bottom-text"><a href="#" class="item1">Giới Thiệu</a></li><li class="bottom-text"><a href="#" class="item2">Giải Thưởng</a></li><li class="bottom-text"><a href="#" class="item3">Thể Lệ</a></li><li class="bottom-text"><a href="#popup-content" class="item4" data-popup>Hướng Dẫn</a></li><li class="bottom-text"><a href="#" class="item5">Bảng Xếp Hạng</a></li><li class="bottom-text"><a href="#" class="item6">Tham Gia</a></li></ul></div></div>
-		</div>
-		<div class="outer">
-			<div id="popup-confirm" class="popup" data-block-id="">
+		<div id="gunny_float_bottom_Ahj5u9" class="floatbottom gunny_float_bottom scrollFrame scaleMobile scaleDesktop mobile" data-block-id="gunny_float_bottom"><div class="floatbottom__background"><span id="gunny_float_bottom_Ahj5u9-scrollwatch-pin" class="scrollwatch-pin"></span></div><div class="floatbottom__content"><ul class="bottom"><li class="bottom-text"><a href="#" class="item1">Giới Thiệu</a></li><li class="bottom-text"><a href="#" class="item2">Giải Thưởng</a></li><li class="bottom-text"><a href="#" class="item3">Thể Lệ</a></li><li class="bottom-text"><a href="#popup-content" class="item4" data-popup>Hướng Dẫn</a></li><li class="bottom-text"><a href="#" class="item5">Bảng Xếp Hạng</a></li><li class="bottom-text"><a href="#" class="item6">Tham Gia</a></li></ul></div></div>
+	</div>
+	<div class="outer">
+		<div id="popup-confirm" class="popup">
 	<div
 		class="popup__background">
 		
-		<span id="_T2J5s-scrollwatch-pin" class="scrollwatch-pin"></span>
+		<span id="-scrollwatch-pin" class="scrollwatch-pin"></span>
 	</div>
 	<div class="popup__content">
 		<div class="popup-container scaleDesktop scaleMobile" data-desktop-origin="center center" data-mobile-origin="center center">
@@ -124,11 +125,11 @@
 	</div>
 </div>
 
-			<div id="popup-congrats" class="popup" data-block-id="">
+		<div id="popup-congrats" class="popup">
 	<div
 		class="popup__background">
 		
-		<span id="_ythqK2-scrollwatch-pin" class="scrollwatch-pin"></span>
+		<span id="-scrollwatch-pin" class="scrollwatch-pin"></span>
 	</div>
 	<div class="popup__content">
 		<div class="popup-container scaleDesktop scaleMobile" data-desktop-origin="center center" data-mobile-origin="center center">
@@ -142,27 +143,27 @@
 	</div>
 </div>
 
-			<div id="popup-content" class="popup" data-block-id="">
+		<div id="popup-content" class="popup">
 	<div
 		class="popup__background">
 		
-		<span id="_U2jsy8-scrollwatch-pin" class="scrollwatch-pin"></span>
+		<span id="-scrollwatch-pin" class="scrollwatch-pin"></span>
 	</div>
 	<div class="popup__content">
 		<div class="popup-container scaleDesktop scaleMobile" data-desktop-origin="center center" data-mobile-origin="center center">
 			<button class="close-btn">Close</button>
 			<div class="center">
-				Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat sed modi quae tenetur laborum quas ut esse eius! Quas voluptatem quos delectus. Repellendus id, possimus officiis dolor nostrum fugit reprehenderit pariatur consequuntur sapiente maiores laborum nemo! Totam maiores autem incidunt. Modi rerum aspernatur consequatur, similique hic cupiditate sequi vel debitis voluptates soluta iure labore aliquam molestias a architecto incidunt laudantium cumque esse consectetur nihil sit! Sint aut quisquam molestias unde exercitationem iure odio. Aliquid quae voluptates hic nemo. Consequuntur molestias cupiditate harum ullam sit vitae! Quidem explicabo, magnam corporis vitae id nesciunt distinctio consectetur incidunt eos autem vel impedit laboriosam rem alias modi architecto. Earum consectetur officiis aut mollitia dicta animi harum cupiditate modi, quis dolor eos ipsam excepturi velit. Autem eaque corporis ex provident aliquid debitis deserunt accusantium, neque voluptatum necessitatibus nemo sint enim laborum perferendis? Distinctio consequuntur omnis quasi ducimus culpa neque porro libero! Culpa exercitationem animi quibusdam ullam delectus adipisci consequatur accusantium voluptatem? Nulla quaerat, facilis culpa doloribus ipsa ad quod nam porro ex quos voluptate aspernatur magni accusantium eos aliquam, fugit asperiores laborum! Accusantium impedit facilis, dicta, voluptatum ipsam velit ea hic mollitia maiores obcaecati ut esse nisi deserunt id. Qui, cupiditate obcaecati corrupti alias magni, et eum, molestiae corporis quaerat vitae totam illum libero minima sunt esse expedita recusandae beatae. Officia molestiae vero cum est recusandae, deleniti inventore, iusto, nesciunt earum delectus illum? Omnis dolorem repellat, consequatur recusandae veniam sint assumenda dolore, rerum, nihil voluptatem eveniet nulla iusto ab cupiditate fugiat. Impedit animi vero cupiditate ab enim molestias minus autem accusantium optio soluta sint porro eligendi commodi, ad vitae consequuntur adipisci? Libero cumque iste excepturi quod vero nesciunt totam voluptate est distinctio officia magni, dolores dignissimos a ipsum! Quasi, similique quis inventore nisi provident quas hic veritatis eius veniam sapiente modi voluptas, quos exercitationem. Expedita commodi eos iusto ratione ipsam earum, at impedit illo tenetur sunt aut consequuntur rem obcaecati, error harum non laborum cum laudantium odit ullam, omnis voluptates et minus. Tempore hic eveniet consequatur accusantium laboriosam tempora eligendi! Cupiditate eius similique dolorem dolor eos eligendi! Ipsa, blanditiis. Explicabo quia vero illo laboriosam aliquam quibusdam, voluptates obcaecati tempore nobis sint modi deserunt expedita impedit optio, nisi consectetur, numquam iusto placeat nihil ratione nostrum doloribus qui! Voluptatem sit iusto aut est voluptate dignissimos deleniti cupiditate, odit ducimus commodi dolorum consequatur magnam. Repellat praesentium voluptates ducimus facilis expedita totam eligendi amet id numquam ab, quam ullam explicabo libero accusantium cumque aperiam illum repudiandae. Cupiditate fugit id ad placeat non et ea porro officia cumque iure maxime dolorem saepe optio incidunt voluptatem at beatae ex quas culpa, corrupti delectus, consequuntur deserunt voluptas libero. Hic accusamus nihil nobis perspiciatis explicabo. Eos magni maxime dignissimos quam nobis nihil nostrum doloribus rerum animi in magnam molestiae officia earum blanditiis, repellat, recusandae laboriosam distinctio mollitia repellendus corporis obcaecati sequi. Omnis ad mollitia architecto sapiente facere tenetur quia autem impedit, provident, quasi praesentium officia velit ex cum sequi quidem debitis hic a repudiandae saepe ut ipsa quam. Omnis deserunt velit totam vero.
+				<iframe src="../article/index.html" frameborder="0"></iframe>
 			</div>
 		</div>
 	</div>
 </div>
 
-			<div id="popup-signin" class="popup" data-block-id="">
+		<div id="popup-signin" class="popup">
 	<div
 		class="popup__background">
 		
-		<span id="_ajequ2-scrollwatch-pin" class="scrollwatch-pin"></span>
+		<span id="-scrollwatch-pin" class="scrollwatch-pin"></span>
 	</div>
 	<div class="popup__content">
 		<div class="popup-container scaleDesktop scaleMobile" data-desktop-origin="center center" data-mobile-origin="center center">
@@ -193,12 +194,11 @@
 	</div>
 </div>
 
-		</div>
-		<div style="display: none;">
-			<div id="font-picker-primary" class="font-picker"></div>
-			<div id="font-picker-secondary" class="font-picker"></div>
-		</div>
-	<script type="text/javascript" src="https://unpkg.com/jquery@3.6.4/dist/jquery.js"></script><script type="text/javascript" src="https://unpkg.com/swiper@7.4.1/swiper-bundle.js"></script><script type="text/javascript" src="https://unpkg.com/@cycjimmy/swiper-animation@4.1.2/dist/swiper-animation.umd.min.js"></script><script type="text/javascript" src="https://unpkg.com/scrollwatch@2.0.1/dist/ScrollWatch-2.0.1.min.js"></script><script type="text/javascript" src="https://unpkg.com/lazysizes@5.3.2/lazysizes.min.js"></script><script type="text/javascript" src="https://unpkg.com/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.js"></script><script type="text/javascript" src="https://unpkg.com/choices.js@10.2.0/public/assets/scripts/choices.js"></script><script type="text/javascript" src="https://unpkg.com/@yaireo/tagify@3.25.0/dist/jQuery.tagify.min.js"></script><script type="text/javascript" src="https://unpkg.com/sortablejs@1.15.0/Sortable.min.js"></script><script type="text/javascript" src="https://unpkg.com/list.js@2.3.1/dist/list.min.js"></script><script type="text/javascript" src="https://unpkg.com/fabric@5.3.0/dist/fabric.min.js"></script><script type="text/javascript" src="https://unpkg.com/twig@1.16.0/twig.min.js"></script><script type="text/javascript" src="./0.prod.bundle.js"></script><script type="text/javascript" src="./prod.bundle.js"></script></body>
+	</div>
+	<div style="display: none;">
+		<div id="font-picker-primary" class="font-picker"></div>
+		<div id="font-picker-secondary" class="font-picker"></div>
+	</div>
+<script type="text/javascript" src="https://unpkg.com/jquery@3.6.4/dist/jquery.js"></script><script type="text/javascript" src="https://unpkg.com/swiper@7.4.1/swiper-bundle.js"></script><script type="text/javascript" src="https://unpkg.com/@cycjimmy/swiper-animation@4.1.2/dist/swiper-animation.umd.min.js"></script><script type="text/javascript" src="https://unpkg.com/scrollwatch@2.0.1/dist/ScrollWatch-2.0.1.min.js"></script><script type="text/javascript" src="https://unpkg.com/lazysizes@5.3.2/lazysizes.min.js"></script><script type="text/javascript" src="https://unpkg.com/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.js"></script><script type="text/javascript" src="https://unpkg.com/choices.js@10.2.0/public/assets/scripts/choices.js"></script><script type="text/javascript" src="https://unpkg.com/@yaireo/tagify@3.25.0/dist/jQuery.tagify.min.js"></script><script type="text/javascript" src="https://unpkg.com/sortablejs@1.15.0/Sortable.min.js"></script><script type="text/javascript" src="https://unpkg.com/list.js@2.3.1/dist/list.min.js"></script><script type="text/javascript" src="https://unpkg.com/fabric@5.3.0/dist/fabric.min.js"></script><script type="text/javascript" src="https://unpkg.com/twig@1.16.0/twig.min.js"></script><script type="text/javascript" src="./0.prod.bundle.js"></script><script type="text/javascript" src="./prod.bundle.js"></script></body>
+
 </html>
-
-
